@@ -1,6 +1,12 @@
 "ChangeLog"
 #	$Id: ChangeLog,v 1.256 2011/05/03 19:20:32 fang Exp $
 
+2016-06-22	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-86-59:
+	  Support Cadence incisive for VPI cosimulation.
+
+
 2014-08-05	David Fang	<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-86-55:
